--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.card-margin {
+  margin: 20px 0px; 
+}
